fix chrome layout bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,4 @@
-//////////////////////////
-// Colors
-//////////////////////////
-
-$anchor-color: #de935f;
-$page-background-color: #282a2e;
-$background-color: #1d1f21;
-$header-footer-background-color: #373b41;
-$visited-anchor: #d4712b;
-$text-color: #dbdbdb;
-$card-background-color: #373b41;
-
+@import 'colors';
 
 ///////////////////
 // LAYOUT
@@ -17,6 +6,32 @@ $card-background-color: #373b41;
 
 li {
   list-style-type: none;
+}
+
+html {
+  height: 90%;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  width: 60rem;
+  margin: auto;
+  margin-bottom: 0;
+  min-height: 100vh;
+}
+
+#root {
+  min-height: 100vh;
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
 }
 
 /*
@@ -91,33 +106,7 @@ li {
   flex-grow: 1;
 }
 
-html {
-  height: 90%;
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
 
-body {
-  display: flex;
-  flex-direction: column;
-  width: 60rem;
-  margin: auto;
-  margin-bottom: 0;
-  min-height: 100vh;
-}
-
-#root {
-  min-height: 100vh;
-}
-
-#main {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  // margin-bottom: 0;
-  // min-height: 100vh;
-}
 
 //////////////////////////
 // RESPONSIVE
